include .idea in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ ssh.config
 
 # Code signing certificate for Windows binaries
 /windows-signing-cert.pfx
+
+# JetBrains GoLand configuration
+/**/.idea/*
