--- a/docs/config.json
+++ b/docs/config.json
@@ -322,6 +322,9 @@
     "mongodb": {
       "min_version": "3.6"
     },
+    "mysql": {
+      "dbeaver_min_ver": "8.0.3"
+    },
     "teleport": {
       "version": "7.1.0",
       "golang": "1.16",
