Add VS Code guide and update docs for tsh on Windows (#8195)
This adds documentation for using tsh on Windows, along with a guide
for using VS Code Remote Development with Teleport hosts.

Related PRs:
 * #7848: Support Windows with `tsh config`
 * #7790: Support Windows with `tsh ssh` (and `scp`, `join`, `play`, etc)

--- a/docs/config.json
+++ b/docs/config.json
@@ -120,7 +120,8 @@
             { "title": "Using Teleport with PAM", "slug": "/server-access/guides/ssh-pam/" },
             { "title": "OpenSSH Guide", "slug": "/server-access/guides/openssh/" },
             {"title": "BPF Session Recording", "slug": "/server-access/guides/bpf-session-recording/"},
-            {"title": "Restricted Session", "slug": "/server-access/guides/restricted-session/"}
+            {"title": "Restricted Session", "slug": "/server-access/guides/restricted-session/"},
+            {"title": "Visual Studio Code", "slug": "/server-access/guides/vscode/"}
           ]
         }
       ]
