--- a/docs/config.json
+++ b/docs/config.json
@@ -51,7 +51,8 @@
           "entries": [
             { "title": "Terraform Provider", "slug": "/setup/guides/terraform-provider/" },
             { "title": "Docker", "slug": "/setup/guides/docker/" },
-            { "title": "Fluentd", "slug": "/setup/guides/fluentd/" }
+            { "title": "Fluentd", "slug": "/setup/guides/fluentd/" },
+            { "title": "EC2 tags", "slug": "/setup/guides/ec2-tags/" }
           ]
         },
         {
@@ -244,6 +245,10 @@
         {
           "title": "FedRAMP",
           "slug": "/enterprise/fedramp/"
+        },
+        {
+          "title": "SOC2",
+          "slug": "/enterprise/soc2/"
         }
       ]
     },
