--- a/docs/config.json
+++ b/docs/config.json
@@ -30,6 +30,10 @@
           "title": "Admin Guides",
           "slug": "/setup/admin/",
           "entries": [
+            { "title": "Github SSO", "slug": "/setup/admin/github-sso/" },
+            { "title": "Adding nodes", "slug": "/setup/admin/adding-nodes/" },
+            { "title": "Trusted Clusters", "slug": "/setup/admin/trustedclusters/" },
+            { "title": "Labels", "slug": "/setup/admin/labels/" },
             { "title": "Local users", "slug": "/setup/admin/users/" },
             { "title": "Troubleshooting", "slug": "/setup/admin/troubleshooting/" },
             { "title": "Graceful Restarts", "slug": "/setup/admin/graceful-restarts/" },
@@ -51,7 +55,8 @@
           "entries": [
             { "title": "Terraform Provider", "slug": "/setup/guides/terraform-provider/" },
             { "title": "Docker", "slug": "/setup/guides/docker/" },
-            { "title": "Fluentd", "slug": "/setup/guides/fluentd/" }
+            { "title": "Fluentd", "slug": "/setup/guides/fluentd/" },
+            { "title": "EC2 tags", "slug": "/setup/guides/ec2-tags/" }
           ]
         },
         {
@@ -243,6 +248,10 @@
         {
           "title": "FedRAMP",
           "slug": "/enterprise/fedramp/"
+        },
+        {
+          "title": "SOC2",
+          "slug": "/enterprise/soc2/"
         }
       ]
     },
@@ -322,6 +331,9 @@
     "mongodb": {
       "min_version": "3.6"
     },
+    "mysql": {
+      "dbeaver_min_ver": "8.0.3"
+    },
     "teleport": {
       "version": "7.1.0",
       "golang": "1.16",
@@ -334,6 +346,11 @@
     }
   },
   "redirects": [
+    {
+      "source": "/trustedclusters/",
+      "destination": "/setup/admin/trustedclusters/",
+      "permanent": true
+    },
     {
       "source": "/reference/api/architecture/",
       "destination": "/api/architecture/",
