--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,10 +1,7 @@
 version: v1
 plugins:
-  - name: go
+  - name: gogofast
     out: protogen/
     opt:
       - paths=source_relative
-  - name: go-grpc
-    out: protogen/
-    opt:
-      - paths=source_relative
+      - plugins=grpc
