--- a/build.assets/Dockerfile
+++ b/build.assets/Dockerfile
@@ -44,8 +44,10 @@ RUN apt-get update -y --fix-missing && \
         locales \
         make \
         mingw-w64 \
+        mingw-w64-x86-64-dev \
         net-tools \
         openssh-client \
+        osslsigncode \
         python-pip \
         pkg-config \
         shellcheck \
