Added client-side retries to curl.
Downloading of external assets (like etcd, golangci-lint, etc) were
timing out on CI during builds with the following error:

   curl: (28) Operation timed out after n milliseconds with 0 out
   of 0 bytes received

Added client-side retries, delays, and timeouts to curl to make
downloads more resilient against intermittent network issues.

--- a/build.assets/Makefile
+++ b/build.assets/Makefile
@@ -27,6 +27,10 @@ PROTOC_VER ?= 3.6.1
 PROTOC_PLATFORM := linux-x86_64
 GOGO_PROTO_TAG ?= v1.3.2
 
+# CURL_FLAGS defines flags to support client-side retries, delays, and timeouts
+# to make downloads more resilient against intermittent network issues.
+CURL_FLAGS := "--connect-timeout 120 --retry 10 --retry-delay 30"
+
 BUILDBOX=quay.io/gravitational/teleport-buildbox:$(RUNTIME)
 BUILDBOX_FIPS=quay.io/gravitational/teleport-buildbox-fips:$(RUNTIME)
 BUILDBOX_CENTOS6=quay.io/gravitational/teleport-buildbox-centos6:$(RUNTIME)
@@ -111,6 +115,7 @@ buildbox:
 			--build-arg GOGO_PROTO_TAG=$(GOGO_PROTO_TAG) \
 			--build-arg PROTOC_PLATFORM=$(PROTOC_PLATFORM) \
 			--build-arg LIBBPF_VERSION=$(LIBBPF_VERSION) \
+			--build-arg CURL_FLAGS=$(CURL_FLAGS) \
 			--cache-from $(BUILDBOX) \
 			--tag $(BUILDBOX) . ; \
 	fi
