--- a/.github/workflows/dismiss.yaml
+++ b/.github/workflows/dismiss.yaml
@@ -24,4 +24,4 @@ jobs:
         uses: actions/setup-go@v2
         # Run "dismiss-runs" subcommand on bot.
       - name: Dismiss
-        run: cd tool/ci && go run cmd/bot.go --token=${{ secrets.GITHUB_TOKEN }} dismiss-runs
+        run: cd tool/ci && go run cmd/main.go --token=${{ secrets.GITHUB_TOKEN }} dismiss-runs
