Sets up the basics of a performance test in storybook

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -36,7 +36,9 @@
     // Require format
     "module": "commonjs",
     // Import non-ES modules as default imports.
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    // Allow json imports.
+    "resolveJsonModule": true
   },
   "exclude": [
     "node_modules",
