--- a/lib/srv/desktop/rdp/rdpclient/Cargo.toml
+++ b/lib/srv/desktop/rdp/rdpclient/Cargo.toml
@@ -11,8 +11,15 @@ crate-type = ["staticlib"]
 bitflags = "1.3.2"
 byteorder = "1.4.3"
 env_logger = "0.9.0"
+iso7816 = "0.1.0-alpha.1"
+iso7816-tlv = "0.4.1"
 libc = "0.2.98"
 log = "0.4.14"
 num-derive = "0.3"
 num-traits = "0.2"
-rdp-rs = { git = "https://github.com/gravitational/rdp-rs", rev = "52e69b1c73f3601219fa04a43baaf1fc07ab31bf" }
+# Ideally, we'd use RustCrypto/RSA instead of linking OpenSSL. Unfortunately,
+# RustCrypto doesn't expose the low-level primitives we need for the smartcard
+# challenge signing (see src/piv.rs for details).
+openssl = "0.10.36"
+rdp-rs = { git = "https://github.com/gravitational/rdp-rs", rev = "92a80a25e27a802ffb2d21ac9d628e27e831dd5c" }
+uuid = { version = "0.8", features = ["v4"] }
