Update access controls pages
Update links to WebAuthn and changes lingo to refer to either WebAuthn,
MFA, "second factor hardware token" and "second factor authenticator",
where appropriate.

U2F is moved to the references sections and WebAuthn is favored as the
guide to be followed in regards to MFA hardware tokens. Generic language
is used whenever possible, excluding places where we reference server
configuration or protocol support.

--- a/docs/config.json
+++ b/docs/config.json
@@ -226,7 +226,7 @@
           "entries": [
             { "title": "Role Templates", "slug": "/access-controls/guides/role-templates/" },
             { "title": "Session Locking", "slug": "/access-controls/guides/locking/" },
-            { "title": "Second Factor - U2F", "slug": "/access-controls/guides/u2f/" },
+            { "title": "Second Factor - WebAuthn", "slug": "/access-controls/guides/webauthn/" },
             { "title": "Per-session MFA", "slug": "/access-controls/guides/per-session-mfa/" },
             { "title": "Dual Authorization", "slug": "/access-controls/guides/dual-authz/" },
             { "title": "Impersonation", "slug": "/access-controls/guides/impersonation/" }
