--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -14,6 +14,11 @@ on:
   pull_request_target: 
     types: [assigned, opened, reopened, ready_for_review, synchronize]
 
+# Only grant write permissions to pull requests for the Github token. 
+# The default is write permissions to many resources, but it's best 
+# practice to keep the scope as small as possible. 
+permissions: read-all
+
 jobs: 
   check-reviews:
     name: Checking reviewers 
@@ -27,4 +32,4 @@ jobs:
         uses: actions/setup-go@v2
         # Run "check-reviewers" subcommand on bot.
       - name: Checking reviewers
-        run: cd tool/ci && go run cmd/main.go --token=${{ secrets.GITHUB_TOKEN }} --reviewers=${{ secrets.reviewers }} check-reviewers
+        run: cd .github/workflows && go run cmd/main.go --token=${{ secrets.GITHUB_TOKEN }} --reviewers=${{ secrets.reviewers }} check-reviewers
