--- a/.github/workflows/assign.yaml
+++ b/.github/workflows/assign.yaml
@@ -1,12 +1,9 @@
 # This workflow is run whenever a pull request is opened, re-opened, or taken
 # out of draft (ready for review). 
 #
-# NOTE: pull_request_target behaves the same as pull_request except it gives a
+# NOTE: pull_request_target behaves the same as pull_request except it grants a
 # read/write token to workflows running on a pull request from a fork. While this 
-# may seem unsafe, there is a repository rule setting set that requires approval from a maintainer 
-# to run workflows for external contributors' pull requests. Those who approve workflow runs 
-# must be looking through the workflow files attentively and ensuring there aren't any malicious 
-# changes. 
+# may seem unsafe, we are limiting the permissions of the Github token below.
 name: Assign
 on: 
   pull_request_target:
