--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -1,12 +1,9 @@
 # Workflow will trigger on all pull request (except draft), pull request review, and commit push to a 
 # pull request (synchronize) event types
 # 
-# NOTE: pull_request_target behaves the same as pull_request except it gives a
+# NOTE: pull_request_target behaves the same as pull_request except it grants a
 # read/write token to workflows running on a pull request from a fork. While this 
-# may seem unsafe, there is a repository rule setting that requires approval from a maintainer 
-# to run workflows for external contributors' pull requests. Those who approve workflow runs 
-# must be looking through the workflow files attentively and ensuring there aren't any malicious 
-# changes. 
+# may seem unsafe, we are limiting the permissions of the Github token below.
 name: Check
 on: 
   pull_request_review:
