--- a/examples/resources/plugins/teleport-slack-proxy.toml
+++ b/examples/resources/plugins/teleport-slack-proxy.toml
@@ -1,10 +1,8 @@
 # example slack plugin configuration TOML file
 
 [teleport]
-addr = "auth.example.com:3025"           # Teleport Auth Server GRPC API address
-client_key = "/var/lib/teleport/plugins/slack/auth.key" # Teleport GRPC client secret key
-client_crt = "/var/lib/teleport/plugins/slack/auth.crt" # Teleport GRPC client certificate
-root_cas = "/var/lib/teleport/plugins/slack/auth.cas"   # Teleport cluster CA certs
+addr = "teleport.example.com:443"           # Teleport Auth Server GRPC API address
+identity = "/var/lib/teleport-plugin/access-plugin-slack.pem"
 
 [slack]
 token = "xoxb-11xx"             # Slack Bot OAuth token
