--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@master
       - name: Installing the latest version of Go.
         uses: actions/setup-go@v2
-        # Getting the Github Webblow key to verify commit signatures 
+        # Getting the Github Webflow key to verify commit signatures 
         # from Github when determining whether or not to invalidate 
         # reviews for external contributors. 
       - name: Get Github Webflow Key
