replace golint with revive and fix minor issues detected

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,11 @@
 issues:
   exclude-rules:
-    - linters: gosimple
+    - linters:
+      - gosimple
       text: "S1002: should omit comparison to bool constant"
+    - linters:
+      - revive
+      text: "exported: exported const"
   exclude-use-default: true
   max-same-issues: 0
   max-issues-per-linter: 0
@@ -16,6 +20,7 @@ linters:
     - govet
     - ineffassign
     - misspell
+    - revive
     - staticcheck
     - structcheck
     - typecheck
